--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10 ">
             <div id="scope-header" class="text-center mb-6">
                 <h2 class="text-4xl md:text-5xl font-bold gradient-text mb-4 glow-text scope-title">Project Scope</h2>
-                <p class="text-xl text-gray-300 max-w-3xl mx-auto scope-subtitle">
-                    Comprehensive development of AI-driven educational chatbots targeting specific learning modules
+                <p class="text-md text-gray-300 max-w-3xl mx-auto text-justify">
+                    As the demand for scalable and personalized learning solutions grows, this project explores the integration of Generative AI into higher education through the development of intelligent educational chatbots. Focused on addressing the most common academic challenges faced by students at the Sri Lanka Institute of Information Technology (SLIIT), this initiative introduces AI-powered assistants tailored to core subjects such as Mathematics, Programming, English Language, and Data Structures & Algorithms (DSA). By leveraging advanced language models and educational technology, the project aims to create a supportive, adaptive, and interactive learning ecosystem that enhances both student engagement and academic performance.                
                 </p>
             </div>
 
@@ -1315,7 +1315,7 @@
     </footer>
 
     <!-- Back to Top Button -->
-    <button id="backToTop" class="fixed bottom-8 right-8 w-12 h-12 gradient-bg text-white rounded-full shadow-lg hover:opacity-90 transform hover:scale-110 transition-all duration-200 opacity-0 invisible neon-glow">
+    <button id="backToTop" class="fixed bottom-8 right-3 w-12 h-12 gradient-bg text-white rounded-full shadow-lg hover:opacity-90 transform hover:scale-110 transition-all duration-200 opacity-0 invisible neon-glow">
         <i class="fas fa-chevron-up"></i>
     </button>
 
