--- a/index.html
+++ b/index.html
@@ -895,6 +895,15 @@
                                 <h4 class="font-bold text-white mb-2">SQLite3</h4>
                                 <p class="text-xs text-gray-400">Lightweight Database</p>
                             </div>
+
+                            <!-- VS Code -->
+                            <div class="bg-gray-800/50 border border-purple-500/20 rounded-xl p-6 shadow-lg hover:shadow-xl transition-all duration-300 transform hover:scale-105 text-center">
+                                <div class="w-20 h-20 mx-auto mb-4">
+                                    <img src="https://img.icons8.com/?size=100&id=9OGIyU8hrxW5&format=png&color=000000" alt="Visual Studio Code Logo" class="w-16 h-16 object-contain">
+                                </div>
+                                <h4 class="font-bold text-white mb-2">Visual Studio Code</h4>
+                                <p class="text-xs text-gray-400">Development Environment</p>
+                            </div>
                         </div>
                     </div>
                 </div>
