--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@
                 <span class="text-sm text-white">Status Document (Group)</span>
             </a>
 
-            <a href="#" target="_blank" rel="noopener noreferrer"
+            <a href="https://drive.google.com/drive/folders/1lwpwFpqQBVZa-2qrojHJkkQqRneQl5Sb?usp=drive_link" target="_blank" rel="noopener noreferrer"
                 class="bg-gray-800 hover:bg-gray-700 p-6 rounded-xl shadow-lg border-t-4 border-purple-500 transition flex flex-col items-center text-center space-y-4">
                 <img src="assets/pdf_2497547.png" alt="Document Icon" class="w-8 h-8">
                 <span class="text-sm text-white">Status Document 2 (Individual)</span>
@@ -1106,7 +1106,7 @@
                 <span class="text-sm text-white">Progress Presentation 2</span>
             </a>
 
-            <a href="#" target="_blank" rel="noopener noreferrer"
+            <a href="https://drive.google.com/drive/folders/18KkTkpLFoD4YxQXVC5qzKQERNTy7n_w5?usp=sharing" target="_blank" rel="noopener noreferrer"
                 class="bg-gray-800 hover:bg-gray-700 p-6 rounded-xl shadow-lg border-t-4 border-orange-300 transition flex flex-col items-center text-center space-y-4">
                 <img src="assets/file_14592670.png" alt="Presentation Icon" class="w-10 h-10">
                 <span class="text-sm text-white">Final Presentation</span>
