--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,7 @@
         <div class="flex justify-center ml-30">
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-6 max-w-6xl">
 
-            <a href="#" target="_blank" rel="noopener noreferrer"
+            <a href="https://github.com/GenAI-Chatbots" target="_blank" rel="noopener noreferrer"
                 class="bg-gray-800 hover:bg-gray-700 p-6 rounded-xl shadow-lg border-t-4 border-green-400 transition flex flex-col items-center text-center space-y-4">
                 <img src="assets/css_1063216.png" alt="Resource Icon" class="w-9 h-9">
                 <span class="text-sm text-white">Source Code</span>
