--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
                 </p>
             </div>
             <div id="hero-buttons" class="flex flex-col sm:flex-row gap-4 justify-center">
-                <button onclick="scrollToSection('scope')" class="glassmorphism-card text-white px-8 py-4 rounded-full text-lg font-semibold hover:bg-purple-600/20 hover:border-purple-400/30 transition duration-300 transform hover:scale-105 neon-glow">
-                    <i class="fas fa-eye mr-2"></i>Explore Research
-                </button>
+                <a href="http://20.85.123.91:5173/" target="_blank" rel="noopener noreferrer" class="glassmorphism-card text-white px-8 py-4 rounded-full text-lg font-semibold hover:bg-purple-600/20 hover:border-purple-400/30 transition duration-300 transform hover:scale-105 neon-glow">
+                    <i class="fas fa-eye mr-2"></i>Launch Chatbot
+                </a>
                 <button onclick="scrollToSection('downloads')" class="gradient-bg text-white px-8 py-4 rounded-full text-lg font-semibold hover:opacity-90 transition duration-300 transform hover:scale-105 neon-glow">
                     <i class="fas fa-download mr-2"></i>Download Report
                 </button>
