--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                             <li>Collect and preprocess learning resources (e.g., lecture notes, grammar rules, code snippets) for efficient chatbot response generation.</li>
                             <li>Enable topic-wise, level-specific, and content-type-based interactions to personalize learning experiences.</li>
                             <li>Integrate cloud-retrieved visual content (e.g., diagrams, flowcharts, formula illustrations) to support visual learning.</li>
-                            <li>Develop a scalable, modular system using ReactJS, FastAPI, AWS EC2, Docker, and MongoDB.</li>
+                            <li>Develop a scalable, modular system using ReactJS, FastAPI, Azure, Docker, and MongoDB.</li>
                             <li>Evaluate effectiveness through student feedback, usage analytics, and academic performance data.</li>
                             </ol>
                         </div>
@@ -656,7 +656,7 @@
                                 <ul class="text-sm text-gray-300 space-y-2">
                                     <li class="flex items-start">
                                         <i class="fas fa-check text-purple-400 text-xs mt-1 mr-2"></i>
-                                        <span>AWS EC2 instances with GPU acceleration</span>
+                                        <span>Azure Containerized instance/VM</span>
                                     </li>
                                     <li class="flex items-start">
                                         <i class="fas fa-check text-purple-400 text-xs mt-1 mr-2"></i>
